--- a/basket-game/IHM.ui
+++ b/basket-game/IHM.ui
@@ -66,7 +66,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="pagePrincipale">
        <property name="maximumSize">
@@ -954,6 +954,9 @@ color: rgb(186, 189, 182);</string>
                 <pointsize>35</pointsize>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(164, 0, 0);</string>
+              </property>
               <property name="text">
                <string>Nom Equipe Rouge</string>
               </property>
@@ -984,6 +987,9 @@ color: rgb(186, 189, 182);</string>
                <font>
                 <pointsize>35</pointsize>
                </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(196, 160, 0);</string>
               </property>
               <property name="text">
                <string>Nom Equipe Jaune</string>
