--- a/basket-game/IHM.ui
+++ b/basket-game/IHM.ui
@@ -1189,8 +1189,11 @@ color: rgb(186, 189, 182);</string>
                   <pointsize>20</pointsize>
                  </font>
                 </property>
+                <property name="styleSheet">
+                 <string notr="true">color: rgb(204, 0, 0);</string>
+                </property>
                 <property name="text">
-                 <string>Panier 1</string>
+                 <string>Panier Rouge</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -1254,8 +1257,11 @@ color: rgb(186, 189, 182);</string>
                   <pointsize>20</pointsize>
                  </font>
                 </property>
+                <property name="styleSheet">
+                 <string notr="true">color: rgb(143, 89, 2);</string>
+                </property>
                 <property name="text">
-                 <string>Panier 2</string>
+                 <string>Panier Jaune</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
