--- a/basket-game/IHM.ui
+++ b/basket-game/IHM.ui
@@ -1255,6 +1255,19 @@ color: rgb(186, 189, 182);</string>
              </layout>
             </item>
             <item>
+             <widget class="QLabel" name="labelPuissance4">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap>images/puissance4.png</pixmap>
+              </property>
+             </widget>
+            </item>
+            <item>
              <layout class="QVBoxLayout" name="verticalLayoutAffichageEquipeJaune">
               <item>
                <widget class="QLabel" name="labelPanierEquipeJaune">
