--- a/basket-game/ressources.qrc
+++ b/basket-game/ressources.qrc
@@ -2,6 +2,12 @@
     <qresource prefix="/">
         <file alias="panneau-basket.png">images/panneau-basket-transparent.png</file>
         <file alias="puissance4.png">images/puissance4.png</file>
+        <file alias="puissance4_7.png">images/puissance4_7.png</file>
+        <file alias="puissance4_6.png">images/puissance4_6.png</file>
+        <file alias="puissance4_5.png">images/puissance4_5.png</file>
+        <file alias="puissance4_4.png">images/puissance4_4.png</file>
+        <file alias="puissance4_3.png">images/puissance4_3.png</file>
+        <file alias="puissance4_2.png">images/puissance4_2.png</file>
         <file>images/jetonJaune.png</file>
         <file>images/jetonRouge.png</file>
     </qresource>
